--- a/src/css/custom-styles.css
+++ b/src/css/custom-styles.css
@@ -34,6 +34,9 @@
     padding-left: 15px;
     font-family: ltc-kennerley, sans-serif
 }
+.large-title{
+    font-weight: normal !important;
+}
 
 @media screen and (max-width:767px) {
     .logo {
