--- a/src/css/imported-styles.css
+++ b/src/css/imported-styles.css
@@ -165,7 +165,7 @@ blockquote {
 .toc-menu-link {
     padding-top: .5em;
     color: #e5e5e5;
-    font-size: 2em;
+    font-size: 34px !important;
     line-height: 1em;
     text-decoration: none
 }
