imnportant line height too!

--- a/src/css/imported-styles.css
+++ b/src/css/imported-styles.css
@@ -166,7 +166,7 @@ blockquote {
     padding-top: .5em;
     color: #e5e5e5;
     font-size: 34px !important;
-    line-height: 1em;
+    line-height: 17px !important;
     text-decoration: none
 }
 
