--- a/src/css/imported-styles.css
+++ b/src/css/imported-styles.css
@@ -163,10 +163,10 @@ blockquote {
 }
 
 .toc-menu-link {
-    padding-top: .5em !important;
+    padding-top: 8px !important;
     color: #e5e5e5;
-    font-size: 2em !important;
-    line-height: 1em !important;
+    font-size: 34px !important;
+    line-height: 34px !important;
     text-decoration: none
 }
 
@@ -175,7 +175,6 @@ blockquote {
 }
 
 .toc-link-parent {
-    font-size: 17px !important;
     position: relative;
     z-index: 100;
     display: -webkit-box;
