--- a/src/css/imported-styles.css
+++ b/src/css/imported-styles.css
@@ -163,10 +163,10 @@ blockquote {
 }
 
 .toc-menu-link {
-    padding-top: 10px !important;
+    padding-top: 0.5em !important;
     color: #e5e5e5;
-    font-size: 34px !important;
-    line-height: 34px !important;
+    font-size: 2em;
+    line-height: 1em;
     text-decoration: none
 }
 
