--- a/src/css/imported-styles.css
+++ b/src/css/imported-styles.css
@@ -235,7 +235,7 @@ blockquote {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
-    display: flex;
+    display: inline-block;
     margin-right: 20px;
     margin-bottom: 0;
     padding: 8px 10px 7px;
@@ -312,7 +312,7 @@ blockquote {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
     -ms-flex-pack: center;
-    justify-content: center;
+    justify-content: start;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
@@ -984,7 +984,7 @@ blockquote {
 
 .card-cover-image.issue {
     height: 100%;
-    max-height: 300px;
+    max-height: 200px;
     min-height: 100px;
     -webkit-box-flex: 1;
     -webkit-flex: 1;
@@ -996,10 +996,10 @@ blockquote {
 .card-cover-image.blog {
     width: 100%;
     min-height: 300px;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 0 auto;
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto;
+    max-height: 400px;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
     border-style: solid;
     border-width: 1px;
     border-color: grey
@@ -1211,7 +1211,7 @@ blockquote {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    max-height: 300px;
+    max-height: 400px;
     min-height: 300px;
     min-width: 200px;
     -webkit-box-orient: vertical;
@@ -1870,6 +1870,8 @@ blockquote {
 
 .image {
     height: 50px;
+    width: 50px;
+    overflow: hidden;
     border-style: solid;
     border-width: 1px;
     border-color: grey;
@@ -2687,7 +2689,7 @@ blockquote {
         min-height: 250px
     }
     .card-cover-image.blog {
-        min-height: 250px
+        min-height: 200px
     }
     .card-cover-image.staff {
         min-height: 400px
@@ -2908,8 +2910,7 @@ blockquote {
         flex: 0 auto
     }
     .simple-button._2nd {
-        margin-top: 20px;
-        margin-left: 0;
+        margin-left: 16px;
         -webkit-box-pack: center;
         -webkit-justify-content: center;
         -ms-flex-pack: center;
@@ -3047,43 +3048,6 @@ blockquote {
         -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr
     }
-    .issue-buttons.bottom {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        width: 100%;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        -webkit-box-pack: start;
-        -webkit-justify-content: flex-start;
-        -ms-flex-pack: start;
-        justify-content: flex-start;
-        -webkit-box-align: start;
-        -webkit-align-items: flex-start;
-        -ms-flex-align: start;
-        align-items: flex-start
-    }
-    .issue-buttons.bottom {
-        display: block;
-        width: 100%;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        -webkit-box-pack: start;
-        -webkit-justify-content: flex-start;
-        -ms-flex-pack: start;
-        justify-content: flex-start;
-        -webkit-box-align: start;
-        -webkit-align-items: flex-start;
-        -ms-flex-align: start;
-        align-items: flex-start
-    }
     .collection-list {
         grid-column-gap: 16px;
         grid-row-gap: 16px;
@@ -3099,7 +3063,7 @@ blockquote {
     }
     .simple-button-2._2nd {
         margin-top: 20px;
-        margin-left: 0;
+        margin-left: 16;
         -webkit-box-pack: center;
         -webkit-justify-content: center;
         -ms-flex-pack: center;
